fixed: closing of modals and overflow grid not scrollable on overflow on /admin/associations for firefox browsers fixed: use/reserve now doesn't show on testlines that are in maintenance

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -402,7 +402,6 @@ main {
 
 .outer-border-hidden {
     overflow: hidden;
-    height: 100%;
     margin: 0 auto;
 }
 
